--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>
-      .
+      Pokémon
     </title>
     <link rel="stylesheet" href="sass/style.scss" />
   </head>
   <body>
+    <div class="pokemon-wrapper">
+      <div class="pokemon-1"></div>
+      <div class="pokemon-2"></div>
+    </div>
     <script src="js/app.js"></script>
   </body>
 </html>
