--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
     </title>
     <link rel="stylesheet" href="sass/style.scss" />
   </head>
+
   <body>
-    <div class="pokemon-wrapper">
-      <div class="pokemon-1"></div>
-      <div class="pokemon-2"></div>
-    </div>
-    <script src="js/app.js"></script>
+    <script defer src="./js/app.js"></script>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
   </body>
 </html>
